--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -3,6 +3,7 @@
     <h2>All Movies</h2>
   </div>
   <div class="list-container">
+    <div class="spinner" *ngIf = "allMovies.length == 0"></div>
     <app-movie [movies] = "allMovies" (movieAdded)="handleAddMovie($event)"></app-movie>
   </div>
 </div>
