--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,12 +1,12 @@
 <div class="list-container">
-  <h4 *ngIf="userMovies.length == 0">Select movies from below to add to your collection</h4>
-  <button mat-button (click)="toggleMode()">
+  <h4 *ngIf="user.myMovies.length == 0">Select movies from below to add to your collection !!</h4>
+  <button mat-button color="warn" (click)="toggleMode()" class="toggle-button">
       <span *ngIf="mode == 'regularMode'">
-        <i class="fa fa-trash-o"></i>trash
+        <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Trash_font_awesome.svg/2000px-Trash_font_awesome.svg.png">
       </span>
       <span *ngIf="mode == 'deleteMode'">
-        <i class="fa fa-check" aria-hidden="true"></i>V
+        <img src="https://png.icons8.com/metro/1600/checkmark.png">
       </span>
     </button>
-  <app-movie [movies]="userMovies" [mode]="mode" (movieDeleted)="handleDeletedMovie($event)"></app-movie>
+  <app-movie [movies]="user.myMovies" [mode]="mode" (movieDeleted)="handleDeletedMovie($event)"></app-movie>
 </div>
