--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,7 +1,7 @@
 <form>
   <input type="text" [(ngModel)]="filterTitle" name="title" placeholder="Search by title" />
   <select [(ngModel)]="filterYear" name="year">
-    <option value=undefined selected>Select year</option>
+    <option value = "undefined" selected >All movies</option>
     <option value="2018">2018</option>
     <option value="2017">2017</option>
     <option value="2016">2016</option>
@@ -65,7 +65,7 @@
 </form>
 <div class="filter-header" *ngIf="filterTitle?.length > 0">Filtering movies by title: {{ filterTitle }}</div>
 <div class="cards-container" layout-wrap layout="row">
-  <mat-card flex="20" *ngFor="let movie of movies | filter: filterTitle : filterYear ; let idx = index" class="movie-card">
+  <mat-card flex="20" *ngFor="let movie of movies | filter: filterTitle : filterYear " class="movie-card">
     <img src="{{movie.imgUrl}}">
     <p>Price: {{ movie.price | currency }}</p>
     <mat-card-header>
